# personal-eng-grammar

./: .mdl_style.rb  .pre-commit-config.yaml  README.md  pyproject.toml
parts-of-the-sentence/: principal.md
